# jayces

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  requirements.txt
.github/workflows/: build.yml  docs.yml
docs/: index.md
docs/reference/: hello.md
examples/: hello.jcs
include/: Env.hpp  Lexer.hpp  Logger.hpp  Parser.hpp  Token.hpp  basic.hpp  env.hpp  lexer.hpp  logger.hpp  parser.hpp  token.hpp
scripts/: build.bat  build_cmake.bat  run.bat
src/: Lexer.cpp  Logger.cpp  lexer.cpp  logger.cpp  main.cpp
